cm4all-beng-proxy (0.7.17) unstable; urgency=low

  * translation: added the BOUNCE packet (variant of REDIRECT)
  * translation: change widget packet HOST to UNTRUSTED
  * translation: pass internal URI arguments to the translation server
  * handler: use the specified status with REDIRECT

 --

cm4all-beng-proxy (0.7.16) unstable; urgency=low

  * processor: separate trusted from untrusted widgets by host name
  * processor: mode=partition is deprecated
  * translate: fix DOCUMENT_ROOT handler for CGI/FASTCGI
  * fcgi-request: added JailCGI support

 -- Max Kellermann <mk@cm4all.com>  Fri, 19 Feb 2010 14:29:29 +0100

cm4all-beng-proxy (0.7.15) unstable; urgency=low

  * processor: unreference the caller pool in abort()
  * tcache: clear BASE on mismatch
  * fcgi-client: generate the Content-Length request header
  * fcgi-client: send the CONTENT_TYPE parameter
  * prototypes/translate.py: use FastCGI to run PHP

 -- Max Kellermann <mk@cm4all.com>  Thu, 11 Feb 2010 14:43:21 +0100

cm4all-beng-proxy (0.7.14) unstable; urgency=low

  * connection: drop connections when the limit is exceeded
  * resource-address: added BASE support
  * fcgi-client: check the request ID in response packets
  * http-client: check response body when request body is closed
  * html-escape: use the last ampersand before the semicolon
  * html-escape: support &apos;
  * processor: unescape widget parameter values

 -- Max Kellermann <mk@cm4all.com>  Fri, 29 Jan 2010 17:49:43 +0100

cm4all-beng-proxy (0.7.13) unstable; urgency=low

  * fcgi-request: duplicate socket path
  * fcgi-request: support ACTION
  * fcgi-client: provide SCRIPT_FILENAME
  * fcgi-client: append empty PARAMS packet
  * fcgi-client: try to read response before request is finished
  * fcgi-client: implement the STDERR packet
  * fcgi-client: support request headers and body
  * fcgi-stock: manage one socket per child process
  * fcgi-stock: unlink socket path after connect
  * fcgi-stock: redirect fd 1,2 to /dev/null